Closed Bug 937605 Opened 12 years ago Closed 12 years ago

Firefox fails to build on PPC64: GCInternals.h:29:5: error: ‘ZoneSelector’ does not name a type

Categories

(Core :: JavaScript Engine, defect)

PowerPC
Linux
defect
Not set
blocker

Tracking

()

VERIFIED FIXED
mozilla28
Tracking Status
firefox28 --- verified

People

(Reporter: gustavold, Assigned: gwagner)

References

Details

Attachments

(1 file)

Firefox fails to build on PPC64 with the following error message: 1:39.88 In file included from /home/buildbot/buildbot/slave/runtests/build/js/src/vm/ForkJoin.h:12:0, 1:39.88 from /home/buildbot/buildbot/slave/runtests/build/js/src/builtin/TestingFunctions.cpp:22: 1:39.88 /home/buildbot/buildbot/slave/runtests/build/js/src/gc/GCInternals.h:29:5: error: ‘ZoneSelector’ does not name a type For the full build log, see: http://mozillaproject.osuosl.org:8010/builders/runtests/builds/517/steps/shell/logs/stdio
This seems to have been introduced by bug #928050
Blocks: 928050
Assignee: nobody → wmccloskey
This also broke OpenBSD/sparc64 the same way, see http://buildbot.rhaalovely.net/builders/mozilla-central-sparc64/builds/610/steps/build/logs/stdio In file included from /home/buildslave/mozilla-central-sparc64/build/js/src/vm/ForkJoin.h:12:0, from /home/buildslave/mozilla-central-sparc64/build/js/src/builtin/TestingFunctions.cpp:22: /home/buildslave/mozilla-central-sparc64/build/js/src/gc/GCInternals.h:29:5: error: 'ZoneSelector' does not name a type ZoneSelector selector; ^ /home/buildslave/mozilla-central-sparc64/build/js/src/gc/GCInternals.h:32:45: error: 'ZoneSelector' has not been declared AutoCopyFreeListToArenas(JSRuntime *rt, ZoneSelector selector); ^ /home/buildslave/mozilla-central-sparc64/build/js/src/gc/GCInternals.h:68:42: error: 'ZoneSelector' has not been declared AutoPrepareForTracing(JSRuntime *rt, ZoneSelector selector);
Attached patch 937605.diffSplinter Review
Assignee: wmccloskey → anygregor
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #833162 - Flags: review?(wmccloskey)
Comment on attachment 833162 [details] [diff] [review] 937605.diff Review of attachment 833162 [details] [diff] [review]: ----------------------------------------------------------------- ::: js/src/gc/GCInternals.h @@ +8,5 @@ > #define gc_GCInternals_h > > #include "jsworkers.h" > > +#include "Zone.h" Please use "gc/Zone.h" instead.
Attachment #833162 - Flags: review?(wmccloskey) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Gustavo, can you please verify this is fixed in Firefox 28?
Flags: needinfo?(gustavold)
Yes, this is fixed. Thanks folks!
Status: RESOLVED → VERIFIED
Flags: needinfo?(gustavold)
Thanks Gustavo.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: