Bug 937605 - Firefox fails to build on PPC64: GCInternals.h:29:5: error: ‘ZoneSelector’ does not name a type. r=billm