js/src/gc/GCInternals.h
@@ -9,6 +9,8 @@
 
 #include "jsworkers.h"
 
+#include "gc/Zone.h"
+
 #include "vm/Runtime.h"
 
 namespace js {
